fix(style): remove nowrap from <code>

--- a/assets/css/doc-content.less
+++ b/assets/css/doc-content.less
@@ -19,9 +19,9 @@
     border: 0;
   }
 
-  ul {
+  ul, ol {
     margin: -15px 0 30px;
-    ul {
+    ul, ol {
       margin: 0 0 30px;
     }
   }
@@ -96,7 +96,6 @@
 
   code {
     color: @code-inline;
-    white-space: nowrap;
   }
   pre {
     overflow: auto;
